# tree-sitter-identifiers-extraction

./: Cargo.toml
src/: main.rs
